noticket: Ignore unknown types of directory entries instead of panicking